[gd_scene load_steps=38 format=3 uid="uid://ubmqrubcq2a2"]

[ext_resource type="Script" uid="uid://dpct6bkajq8et" path="res://entities/game/card_template/scripts/CardTemplate.gd" id="1_fmo68"]
[ext_resource type="AudioStream" uid="uid://dhlalkc173c3p" path="res://assets/audio/effect/card-turn-1.ogg" id="2_7bwi6"]
[ext_resource type="Script" uid="uid://4jlyx3gauqbi" path="res://entities/game/card_template/scripts/CardText.gd" id="3_4fnc2"]
[ext_resource type="AudioStream" uid="uid://48iu01xst023" path="res://assets/audio/effect/card-turn-2.ogg" id="3_hh2fg"]
[ext_resource type="Texture2D" uid="uid://d4nvcsyb0ehtb" path="res://assets/sprites/CardDefaultFront.png" id="4_e8l51"]
[ext_resource type="Script" uid="uid://dooi851ydlcaf" path="res://entities/game/card_template/scripts/CardFrontSize.gd" id="4_kxmgl"]
[ext_resource type="AudioStream" uid="uid://h0louy6yrv3o" path="res://assets/audio/effect/card-turn-3.ogg" id="4_s61ka"]
[ext_resource type="Material" uid="uid://dhujjr84hm1we" path="res://entities/game/card_template/assets/materials/DisolveMaterial.tres" id="5_b0osi"]
[ext_resource type="Script" uid="uid://bkytjukjcpthq" path="res://entities/game/card_template/scripts/CardTemplateDestruction.gd" id="6_7ry7r"]
[ext_resource type="Shader" uid="uid://cen4xj62iwrff" path="res://assets/shaders/DisolveCard.gdshader" id="6_pyeu3"]
[ext_resource type="Script" uid="uid://bel0ari5ushcq" path="res://entities/game/card_template/resources/DissolveEffectResource.gd" id="7_71qre"]
[ext_resource type="Resource" uid="uid://0hefyj7q57o6" path="res://entities/game/card_template/assets/dissolve_effects/dissolve.tres" id="8_nugiu"]
[ext_resource type="Script" uid="uid://cdvlsp04l5fhr" path="res://entities/game/card_template/scripts/ToggleCardVisibility.gd" id="8_pw264"]
[ext_resource type="Script" uid="uid://b5mhdwdn1h8fo" path="res://entities/game/card_template/scripts/CardDropShadow.gd" id="9_ja01p"]
[ext_resource type="Script" uid="uid://dni6lxtacurf1" path="res://entities/game/card_template/scripts/CardHandler.gd" id="9_mu0q4"]
[ext_resource type="Shader" uid="uid://djs1o5pxaguit" path="res://assets/shaders/SingleColorShader.gdshader" id="9_vcvmk"]
[ext_resource type="Texture2D" uid="uid://b0lfebra6adhv" path="res://assets/sprites/Axuree/back_card_1.png" id="14_bmj37"]
[ext_resource type="Material" uid="uid://ceraa2tomrum8" path="res://entities/game/card_template/assets/materials/SelectionShader.tres" id="16_ja01p"]
[ext_resource type="Script" uid="uid://bipcmxhkarmo3" path="res://entities/game/card_template/scripts/DebugControl.gd" id="18_8fn1p"]
[ext_resource type="Script" uid="uid://oqb8v04e4sw6" path="res://entities/game/card_template/scripts/CardTemplateDebug.gd" id="18_tqsbp"]
[ext_resource type="Texture2D" uid="uid://bl38eat4t17v6" path="res://assets/sprites/Axuree/sparkle.png" id="20_ja01p"]
[ext_resource type="Script" uid="uid://dy87p5qmcoqva" path="res://entities/game/card_template/scripts/MatchingCardParticleEffect.gd" id="21_ja01p"]
[ext_resource type="Script" uid="uid://cal3eylr5vt07" path="res://entities/game/card_template/scripts/EffectTrigger.gd" id="23_bmj37"]
[ext_resource type="AudioStream" uid="uid://bc2asc1ycehsj" path="res://assets/audio/effect/card-shove-2.ogg" id="24_7o8gd"]
[ext_resource type="AudioStream" uid="uid://d2smrpmt773ak" path="res://assets/audio/effect/card-shove-4.ogg" id="25_o4ple"]
[ext_resource type="AudioStream" uid="uid://x7uoopn87syx" path="res://assets/audio/effect/card-shove-1.ogg" id="26_7cddj"]
[ext_resource type="AudioStream" uid="uid://klup7a1js5u1" path="res://assets/audio/effect/card-shove-3.ogg" id="27_7sao1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sgpsy"]
shader = ExtResource("6_pyeu3")
shader_parameter/fragment_number = Vector2(20, 20)
shader_parameter/progress = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bmj37"]
shader = ExtResource("9_vcvmk")
shader_parameter/alpha_threshold = 0.58
shader_parameter/replace_color = Color(0, 0, 0, 0.4627451)

[sub_resource type="Gradient" id="Gradient_0sfg2"]
colors = PackedColorArray(0.955955, 0.929103, 0.857593, 1, 0.955955, 0.929103, 0.857593, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vp4ck"]
gradient = SubResource("Gradient_0sfg2")
width = 500
height = 550

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phkhd"]
size = Vector2(500, 550)

[sub_resource type="Curve" id="Curve_vcvmk"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.113014, 1), 0.0, 0.0, 0, 0, Vector2(0.75, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_bmj37"]
curve = SubResource("Curve_vcvmk")

[sub_resource type="Gradient" id="Gradient_ja01p"]
colors = PackedColorArray(0.734813, 0.761868, 0.077911, 1, 1, 1, 0.478431, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vcvmk"]
gradient = SubResource("Gradient_ja01p")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bmj37"]
lifetime_randomness = 0.4
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(250, 275, 1)
angle_min = -88.0
angle_max = 88.0
direction = Vector3(1, 1, 0)
spread = 180.0
initial_velocity_min = -100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 0.25
scale_max = 1.5
color_ramp = SubResource("GradientTexture1D_vcvmk")
alpha_curve = SubResource("CurveTexture_bmj37")

[node name="CardTemplate" type="Node2D" node_paths=PackedStringArray("front_side", "back_side") groups=["game_card"]]
script = ExtResource("1_fmo68")
front_side = NodePath("CanvasGroup/CardFront")
back_side = NodePath("CardBack")
flip_effects = Array[AudioStream]([ExtResource("2_7bwi6"), ExtResource("3_hh2fg"), ExtResource("4_s61ka")])

[node name="CanvasGroup" type="CanvasGroup" parent="."]
material = SubResource("ShaderMaterial_sgpsy")
script = ExtResource("6_7ry7r")
possible_effects = Array[ExtResource("7_71qre")]([ExtResource("8_nugiu")])

[node name="DropShadow" type="Sprite2D" parent="CanvasGroup"]
material = SubResource("ShaderMaterial_bmj37")
position = Vector2(250, 275)
texture = ExtResource("14_bmj37")
script = ExtResource("9_ja01p")
target_offset = Vector2(13, 13)
animation_time = 0.1

[node name="CardBackground" type="Sprite2D" parent="CanvasGroup" groups=["card_content"]]
position = Vector2(250, 275)
texture = SubResource("GradientTexture2D_vp4ck")

[node name="CardText" type="RichTextLabel" parent="CanvasGroup" groups=["card_content"]]
offset_top = 500.0
offset_right = 500.0
offset_bottom = 550.0
tooltip_auto_translate_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]placeholder[/center]"
fit_content = true
script = ExtResource("3_4fnc2")

[node name="CardFront" type="Sprite2D" parent="CanvasGroup" groups=["card_content"]]
position = Vector2(250, 250)
texture = ExtResource("4_e8l51")
script = ExtResource("4_kxmgl")

[node name="CardBack" type="Sprite2D" parent="."]
material = ExtResource("5_b0osi")
position = Vector2(250, 275)
texture = ExtResource("14_bmj37")
script = ExtResource("8_pw264")
focus_animation_time = 0.1
toggle_material = ExtResource("5_b0osi")
focus_material = ExtResource("16_ja01p")

[node name="Area2D" type="Area2D" parent="CardBack"]
script = ExtResource("9_mu0q4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardBack/Area2D"]
shape = SubResource("RectangleShape2D_phkhd")

[node name="DebugInformation" type="Node2D" parent="." node_paths=PackedStringArray("card_id_label", "card_position_label")]
script = ExtResource("18_tqsbp")
card_id_label = NodePath("CardIdLabel")
card_position_label = NodePath("CardPositionLabel")

[node name="CardIdLabel" type="Label" parent="DebugInformation"]
offset_left = 20.0
offset_top = 390.0
offset_right = 218.0
offset_bottom = 527.0
theme_override_colors/font_color = Color(0, 1, 0.815686, 1)
theme_override_font_sizes/font_size = 100
text = "0"
vertical_alignment = 2
script = ExtResource("18_8fn1p")

[node name="CardPositionLabel" type="Label" parent="DebugInformation"]
offset_left = 136.0
offset_top = 22.0
offset_right = 479.0
offset_bottom = 159.0
theme_override_colors/font_color = Color(0, 1, 0.815686, 1)
theme_override_font_sizes/font_size = 100
text = "[0,0]"
horizontal_alignment = 2
script = ExtResource("18_8fn1p")

[node name="MatchingFoundEffect" type="GPUParticles2D" parent="."]
position = Vector2(250, 275)
amount = 800
texture = ExtResource("20_ja01p")
lifetime = 3.0
preprocess = 1.5
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_bmj37")
script = ExtResource("21_ja01p")

[node name="FocusEffect" type="Node" parent="."]
script = ExtResource("23_bmj37")
effect_pool = Array[AudioStream]([ExtResource("24_7o8gd"), ExtResource("25_o4ple"), ExtResource("26_7cddj"), ExtResource("27_7sao1")])
volume = -15.0

[connection signal="about_to_get_delete" from="." to="CanvasGroup" method="animate_destruction"]
[connection signal="about_to_get_delete" from="." to="CardBack" method="remove_from_board"]
[connection signal="about_to_get_delete" from="." to="MatchingFoundEffect" method="trigger"]
[connection signal="card_in_focus" from="." to="CardBack" method="is_focused"]
[connection signal="card_in_focus" from="." to="FocusEffect" method="trigger_random_effect"]
[connection signal="card_lost_focus" from="." to="CardBack" method="lost_focus"]
[connection signal="card_text_changed" from="." to="CanvasGroup/CardText" method="set_card_text"]
[connection signal="card_tooltip_changed" from="." to="CanvasGroup/CardText" method="set_tooltip"]
[connection signal="card_triggered" from="." to="CanvasGroup" method="show_card_content"]
[connection signal="card_triggered" from="." to="CanvasGroup/CardText" method="card_revealed"]
[connection signal="deck_changed" from="." to="CanvasGroup/DropShadow" method="deck_changed"]
[connection signal="deck_changed" from="." to="CardBack" method="deck_changed"]
[connection signal="hide_card" from="." to="CanvasGroup/CardText" method="card_hidden"]
[connection signal="hide_card" from="." to="CardBack" method="toggle_on"]
[connection signal="input_active" from="." to="CardBack" method="input_active"]
[connection signal="input_active" from="." to="FocusEffect" method="toggle_state"]
[connection signal="ready_for_destruction" from="CanvasGroup" to="." method="destory_now"]
[connection signal="focus_lost" from="CardBack" to="CanvasGroup/DropShadow" method="lost_focus"]
[connection signal="fully_hidden" from="CardBack" to="CanvasGroup" method="hide_card_content"]
[connection signal="hide_started" from="CardBack" to="CanvasGroup/DropShadow" method="lost_focus"]
[connection signal="in_focus" from="CardBack" to="CanvasGroup/DropShadow" method="got_focus"]
[connection signal="in_focus" from="CardBack" to="FocusEffect" method="trigger_random_effect"]
[connection signal="clicked" from="CardBack/Area2D" to="." method="card_was_clicked"]
[connection signal="mouse_entered" from="CardBack/Area2D" to="." method="selected_by_mouse"]
[connection signal="mouse_entered" from="CardBack/Area2D" to="CardBack" method="is_focused"]
